--- a/contacts.html
+++ b/contacts.html
@@ -58,29 +58,26 @@
       </div>
     </footer>
   </nav>
-  
+
   <main>
     <header>
       <div class="center">
         <p class="app-tagline">Kanban Project Management Tool</p>
       </div>
-
-          <div class="center">
-    <p class="app-tagline">Kanban Project Management Tool</p>
-  </div>
-  <div class="user-actions">
-    <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
-    <div class="user-profile-container">
-      <span class="user-profile" id="user-profile">G</span>
-    </div>
-    <button class="btn-logout" onclick="logout()">Logout</button>
-  </div>
+      <div class="user-actions">
+        <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
+        <div class="user-profile-container">
+          <span class="user-profile" id="user-profile">G</span>
+        </div>
+        <button class="btn-logout" onclick="logout()">Logout</button>
+      </div>
     </header>
 
     <div class="wrapper">
 
       <section class="contact-list">
-        <button class="add-contact-btn" onclick="">Add new contact <img src="./assets/icons/person_add.svg" alt="add Person"></button>
+        <button class="add-contact-btn" onclick="">Add new contact <img src="./assets/icons/person_add.svg"
+            alt="add Person"></button>
 
       </section>
 
