overlay dialog add contact

--- a/contacts.html
+++ b/contacts.html
@@ -11,10 +11,13 @@
 
   <script src="./scripts/summary.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
+    <script src="./scripts/contacts.js" defer></script>
+  <script src="./scripts/contacts-template.js" defer></script>
 
 
 
-  <title>Summary</title>
+
+  <title>Contacts</title>
 </head>
 
 <body>
@@ -76,7 +79,7 @@
     <div class="wrapper">
 
       <section class="contact-list">
-        <button class="add-contact-btn" onclick="">Add new contact <img src="./assets/icons/person_add.svg"
+        <button class="add-contact-btn" onclick="openAddContactDialog()">Add new contact <img src="./assets/icons/person_add.svg"
             alt="add Person"></button>
 
       </section>
