--- a/board.html
+++ b/board.html
@@ -88,7 +88,7 @@
                     <div class="user-profile-container">
                         <span class="user-profile" id="user-profile">G</span>
                     </div>
-                    <button class="btn-logout" onclick="logout()">Logout</button>
+                    <!--<button class="btn-logout" onclick="logout()">Logout</button>-->
                 </div>
             </header>
 
