contact functions edited

--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
   <script src="./scripts/sidebar.js" defer></script>
     <script src="./scripts/contacts.js" defer></script>
   <script src="./scripts/contacts-template.js" defer></script>
+    <script src="./script.js" defer></script>
+
 
 
 
