--- a/addTask.html
+++ b/addTask.html
@@ -13,7 +13,7 @@
   <script src="./scripts/sidebar.js"></script>
   <script src="./script.js"></script>
   <script src="./scripts/addTask.js"></script>
-  <script src="./scripts/templates.js"></script>
+  <script src="./scripts/addTaskTemplates.js"></script>
 </head>
 
 <body onload="renderAddTask()">
