--- a/addTask.html
+++ b/addTask.html
@@ -12,8 +12,9 @@
 
   <script src="./scripts/sidebar.js"></script>
   <script src="./script.js"></script>
-  <script src="./scripts/addTask.js"></script>
-  <script src="./scripts/addTaskTemplates.js"></script>
+  <script src="./scripts/addTask.js" defer></script>
+  <script src="./scripts/addTaskTemplates.js" defer></script>
+  <script src="./scripts/contacts.js" defer></script>
 </head>
 
 <body onload="renderAddTask()">
