--- a/contacts.html
+++ b/contacts.html
@@ -11,9 +11,9 @@
 
   <script src="./scripts/summary.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
-    <script src="./scripts/contacts.js" defer></script>
+  <script src="./scripts/contacts.js" defer></script>
   <script src="./scripts/contacts-template.js" defer></script>
-    <script src="./script.js" defer></script>
+  <script src="./script.js" defer></script>
 
 
 
@@ -81,9 +81,10 @@
     <div class="wrapper">
 
       <section class="contact-section">
+        <button class="add-contact-btn" onclick="openAddContactDialog()">Add new contact <img
+            src="./assets/icons/person_add.svg" alt="add Person"></button>
+
         <div class="contact-list" id="contact-list"></div>
-        <button class="add-contact-btn" onclick="openAddContactDialog()">Add new contact <img src="./assets/icons/person_add.svg"
-            alt="add Person"></button>
 
       </section>
 
