css contacts right

--- a/contacts.html
+++ b/contacts.html
@@ -88,12 +88,14 @@
 
       </section>
 
-      <section>
-        <div class="welcome-msg-box" id="welcome-msg-box">
-          <span class="welcome-msg" id="welcome-msg">Welcome, </span>
-          <span class="username-field" id="username-field">User</span>
+      <section class="contact-section-right">
+        <div class="contact-div-right">
+          <h1 class="title-contacts">Contacts</h1>
+          <span class="separator">|</span>
+          <span class="subtitle">Better with a team</span>
         </div>
       </section>
+
 
     </div>
 
@@ -102,4 +104,3 @@
 </body>
 
 </html>
-
