--- a/contacts.html
+++ b/contacts.html
@@ -80,19 +80,28 @@
 
     <div class="wrapper">
 
-      <section class="contact-section">
-        <button class="add-contact-btn" onclick="openAddContactDialog()">Add new contact <img
-            src="./assets/icons/person_add.svg" alt="add Person"></button>
 
-        <div class="contact-list" id="contact-list"></div>
+      <section class="contact-section-left">
+        <div class="contact-section">
+          <button class="add-contact-btn" onclick="openAddContactDialog()">
+            Add new contact
+            <img src="./assets/icons/person_add.svg" alt="add Person">
+          </button>
+
+          <div class="contact-list" id="contact-list"></div>
+
+        </div>
+
 
       </section>
 
       <section class="contact-section-right">
         <div class="contact-div-right">
-          <h1 class="title-contacts">Contacts</h1>
-          <span class="separator">|</span>
-          <span class="subtitle">Better with a team</span>
+          <div class="contact-maintitle-container">
+            <h1 class="title-contacts">Contacts</h1>
+            <span class="separator">|</span>
+            <span class="subtitle">Better with a team</span>
+          </div>
         </div>
       </section>
 
