Synchronize with remote: pulled latest changes, resolved conflicts if any, and pushed all local updates for project continuity and collaboration.

--- a/contacts.html
+++ b/contacts.html
@@ -102,6 +102,7 @@
             <span class="separator">|</span>
             <span class="subtitle">Better with a team</span>
           </div>
+          <div class="contact-details-container" id="contact-details"></div>
         </div>
       </section>
 
