css bugfix: add contact button now remains on top

--- a/contacts.html
+++ b/contacts.html
@@ -87,13 +87,15 @@
             Add new contact
             <img src="./assets/icons/person_add.svg" alt="add Person">
           </button>
-
-          <div class="contact-list" id="contact-list"></div>
+          <div class="contact-section scroll">
+            <div class="contact-list" id="contact-list"></div>
+          </div>
 
         </div>
 
 
       </section>
+
 
       <section class="contact-section-right">
         <div class="contact-div-right">
