legal-notice and privacy-policy: highlighted-class added in nav

--- a/legal-notice.html
+++ b/legal-notice.html
@@ -45,7 +45,7 @@
       <div onclick="sidebarHighlightingPrivacyPolicy()" class="footer-link-container" id="privacy-policy-div">
         <a href="./privacy-policy.html" class="sidebar-footer-link-hover-effect">Privacy Policy</a>
       </div>
-      <div onclick="sidebarHighlightingLegalNotice()" class="footer-link-container" id="legal-notice-div">
+      <div onclick="sidebarHighlightingLegalNotice()" class="footer-link-container highlighted" id="legal-notice-div">
         <a href="./legal-notice.html" class="sidebar-footer-link-hover-effect">Legal notice</a>
       </div>
     </footer>
