--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,7 +42,7 @@
     </ul>
 
     <footer class="sidebar-footer">
-      <div onclick="sidebarHighlightingPrivacyPolicy()" class="footer-link-container" id="privacy-policy-div">
+      <div onclick="sidebarHighlightingPrivacyPolicy()" class="footer-link-container highlighted" id="privacy-policy-div">
         <a href="./privacy-policy.html" class="sidebar-footer-link-hover-effect">Privacy Policy</a>
       </div>
       <div onclick="sidebarHighlightingLegalNotice()" class="footer-link-container" id="legal-notice-div">
