sidebarHighlightingPrivacyPolicy and sidebarHighlightingLegalNotice deleted

--- a/help.html
+++ b/help.html
@@ -42,10 +42,10 @@
     </ul>
 
     <footer class="sidebar-footer">
-      <div onclick="sidebarHighlightingPrivacyPolicy()" class="footer-link-container" id="privacy-policy-div">
+      <div class="footer-link-container" id="privacy-policy-div">
         <a href="./privacy-policy.html" class="sidebar-footer-link-hover-effect">Privacy Policy</a>
       </div>
-      <div onclick="sidebarHighlightingLegalNotice()" class="footer-link-container" id="legal-notice-div">
+      <div class="footer-link-container" id="legal-notice-div">
         <a href="./legal-notice.html" class="sidebar-footer-link-hover-effect">Legal notice</a>
       </div>
     </footer>
