Adjust login error message

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <button type="button" class="btn-guestlogin" onclick="guestLogin()">Guest Log in</button>
         </div>
       </form>
+      <div class="login-error-container" id="errorContainer"></div>
     </div>
   </div>
 
