index.html: Privacy Policy and Legal Notice added with css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
   </div>
 
   <div id="msgBox"></div>
+
+  <footer>
+
+    <a href="./privacy-policy.html">Privacy Policy</a>
+    <a href="./legal-notice.html">Legal Notice</a>
+
+  </footer>
 </body>
 
 </html>
