index.html: start animation added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+  <!-- Intro Animation -->
+  <div class="intro-overlay" id="introOverlay">
+    <img src="./assets/img/Join Logo.svg" alt="Join Logo" class="intro-logo" id="introLogo">
+  </div>
+
+  <div class="main-content" id="mainContent">
   <header class="header">
     <div class="header-left">
       <img src="./assets/img/Join Logo.svg" alt="Join Logo">
@@ -45,6 +51,7 @@
     <a href="./legal-notice.html">Legal Notice</a>
 
   </footer>
+  </div>
 </body>
 
 </html>
