Added various cases for login validation

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <h1>Log In</h1>
       <div class="login-separater"></div>
       <form class="login-input">
-        <input type="email" id="loginEmail" placeholder="E-Mail" required>
-        <input type="password" id="loginPassword" placeholder="Passwort" required>
+        <input type="email" id="loginEmail" placeholder="E-Mail">
+        <input type="password" id="loginPassword" placeholder="Passwort">
         <div class="login-buttons">
           <button type="button" class="btn-login" onclick="login()">Log in</button>
           <button type="button" class="btn-guestlogin" onclick="guestLogin()">Guest Log in</button>
