Public version of Privacy Policy and Legal Notice added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
   <footer>
 
-    <a href="./privacy-policy.html">Privacy Policy</a>
-    <a href="./legal-notice.html">Legal Notice</a>
+    <a href="./public/privacy-policy.html">Privacy Policy</a>
+    <a href="./public/legal-notice.html">Legal Notice</a>
 
   </footer>
   </div>
