--- a/legal-notice.html
+++ b/legal-notice.html
@@ -20,7 +20,7 @@
     <img class="logo_sidebar" src="./assets/img/join_logo_white.svg" alt="Join Logo">
 
     <ul>
-      <li onclick="sidebarHighlightingSummary()" id="summary-li">
+      <li onclick="sidebarHighlightingSummary()" class="sidebar-li-hover-effect" id="summary-li">
         <div>
           <img src="./assets/icons/vector_summ.svg" alt="Summary-Icon">
           <a href="summary.html" aria-current="page">Summary</a>
