--- a/index.html
+++ b/index.html
@@ -17,40 +17,46 @@
   </div>
 
   <div class="main-content" id="mainContent">
-  <header class="header">
-    <div class="header-left">
-      <img src="./assets/img/Join Logo.svg" alt="Join Logo">
+    <header class="header">
+      <div class="header-left">
+        <img src="./assets/img/Join Logo.svg" alt="Join Logo">
+      </div>
+      <div class="header-right">
+        <span>Not a Join User?</span>
+        <button onclick="navigateToSignup()" class="btn-signup">Sign Up</button>
+      </div>
+    </header>
+
+    <div class="content">
+      <div class="login">
+        <h1>Log In</h1>
+        <div class="login-separater"></div>
+        <form class="login-input">
+          <div class="input-field">
+            <input type="email" id="loginEmail" placeholder="E-Mail">
+            <img src="./assets/icons/mail.svg" alt="">
+          </div>
+          <div class="input-field">
+            <input type="password" id="loginPassword" placeholder="Passwort">
+            <img src="./assets/icons/lock.svg" alt="">
+          </div>
+          <div class="login-buttons">
+            <button type="button" class="btn-login" onclick="login()">Log in</button>
+            <button type="button" class="btn-guestlogin" onclick="guestLogin()">Guest Log in</button>
+          </div>
+        </form>
+        <div class="login-error-container" id="errorContainer"></div>
+      </div>
     </div>
-    <div class="header-right">
-      <span>Not a Join User?</span>
-      <button onclick="navigateToSignup()" class="btn-signup">Sign Up</button>
-    </div>
-  </header>
 
-  <div class="content">
-    <div class="login">
-      <h1>Log In</h1>
-      <div class="login-separater"></div>
-      <form class="login-input">
-        <input type="email" id="loginEmail" placeholder="E-Mail">
-        <input type="password" id="loginPassword" placeholder="Passwort">
-        <div class="login-buttons">
-          <button type="button" class="btn-login" onclick="login()">Log in</button>
-          <button type="button" class="btn-guestlogin" onclick="guestLogin()">Guest Log in</button>
-        </div>
-      </form>
-      <div class="login-error-container" id="errorContainer"></div>
-    </div>
-  </div>
+    <div id="msgBox"></div>
 
-  <div id="msgBox"></div>
+    <footer>
 
-  <footer>
+      <a href="./public/privacy-policy.html">Privacy Policy</a>
+      <a href="./public/legal-notice.html">Legal Notice</a>
 
-    <a href="./public/privacy-policy.html">Privacy Policy</a>
-    <a href="./public/legal-notice.html">Legal Notice</a>
-
-  </footer>
+    </footer>
   </div>
 </body>
 
