Sign up and login Content corrections

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="login-separater"></div>
         <form class="login-input">
           <div class="input-field">
-            <input type="email" id="loginEmail" placeholder="E-Mail">
+            <input type="email" id="loginEmail" class="input-placeholder" placeholder="Email">
             <img src="./assets/icons/mail.svg" alt="">
           </div>
           <div class="input-field">
-            <input type="password" id="loginPassword" placeholder="Passwort">
+            <input type="password" id="loginPassword" class="input-placeholder" placeholder="Password">
             <img src="./assets/icons/lock.svg" alt="">
           </div>
           <div class="login-buttons">
