--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="input-field">
-          <input class="input-focus" type="email" id="registerEmail" placeholder="E-Mail" required>
+          <input class="input-focus" type="email" id="registerEmail" placeholder="Email" required>
           <img src="./assets/icons/mail.svg">
         </div>
 
@@ -46,7 +46,7 @@
 
         <div class="accept-privacy-policy">
           <input type="checkbox" required>
-          <div>I accept the <a href="privacy-policy.html">Privacy Policy</a></div>
+          <div>I accept the <a href="./public/privacy-policy.html">Privacy Policy</a></div>
         </div>
 
         <div class="login-buttons">
