Show visibility_off icon when password input is filled

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           </div>
           <div class="input-field">
             <input type="password" id="loginPassword" class="input-placeholder" placeholder="Password">
-            <img src="./assets/icons/lock.svg" alt="">
+            <img src="./assets/icons/lock.svg" alt="" id="lockIcon">
+            <img src="./assets/icons/visibility_off.svg" alt="" id="visibilityIcon" style="display: none;">
           </div>
           <div class="login-buttons">
             <button type="button" class="btn-login" onclick="login()">Log in</button>
