feat(login): implement password show/hide toggle with visibility icons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
           <div class="input-field">
             <input type="password" id="loginPassword" class="input-placeholder" placeholder="Password">
             <img src="./assets/icons/lock.svg" alt="" id="lockIcon">
-            <img src="./assets/icons/visibility_off.svg" alt="" id="visibilityIcon" style="display: none;">
+            <img src="./assets/icons/visibility_off.svg" alt="" id="visibilityOffIcon" class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility.svg" alt="" id="visibilityIcon" class="is-hidden password-toggle">
           </div>
           <div class="login-buttons">
             <button type="button" class="btn-login" onclick="login()">Log in</button>
