--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="login-buttons">
-          <button class="btn-login">Sign up</button>
+          <button class="btn-signup">Sign up</button>
         </div>
       </form>
     </div>
