--- a/signup.html
+++ b/signup.html
@@ -24,30 +24,29 @@
         <h1>Sign Up</h1>
       </div>
       <div class="login-separater"></div>
-      <form class="login-input" onsubmit="addUser(); return false">
+      <form class="login-input" onsubmit="handleSignupSubmit(event)" novalidate>
         <div class="input-field">
-          <input class="input-focus" type="text" id="registerName" placeholder="Name" required>
+          <input class="input-focus" type="text" id="registerName" placeholder="Name">
           <img src="./assets/icons/person.svg">
         </div>
 
         <div class="input-field">
-          <input class="input-focus" type="email" id="registerEmail" placeholder="Email" required>
+          <input class="input-focus" type="email" id="registerEmail" placeholder="Email">
           <img src="./assets/icons/mail.svg">
         </div>
 
         <div class="input-field">
-          <input class="input-focus" type="password" id="registerPassword" placeholder="Password" required>
+          <input class="input-focus" type="password" id="registerPassword" placeholder="Password">
           <img src="./assets/icons/lock.svg">
         </div>
 
         <div class="input-field">
-          <input class="input-focus" type="password" id="registerPasswordConfirm" placeholder="Confirm Password"
-            required>
+          <input class="input-focus" type="password" id="registerPasswordConfirm" placeholder="Confirm Password">
           <img src="./assets/icons/lock.svg">
         </div>
 
         <div class="accept-privacy-policy">
-          <input type="checkbox" required>
+          <input type="checkbox" id="acceptPrivacy">
           <div><span class="checkbox-text">I accept the </span><a href="./public/privacy-policy.html">Privacy Policy</a>
           </div>
         </div>
