form validation signup: name, email, password, privacy policy

--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="accept-privacy-policy">
-          <input type="checkbox" id="acceptPrivacy">
+          <input type="checkbox" class="accept-privacy" id="acceptPrivacy">
           <div><span class="checkbox-text">I accept the </span><a href="./public/privacy-policy.html">Privacy Policy</a>
           </div>
         </div>
