--- a/signup.html
+++ b/signup.html
@@ -25,30 +25,45 @@
       </div>
       <div class="login-separater"></div>
       <form class="login-input" onsubmit="handleSignupSubmit(event)" novalidate>
-        <div class="input-field">
-          <input class="input-focus" type="text" id="registerName" placeholder="Name">
-          <img src="./assets/icons/person.svg">
-        </div>
-
-        <div class="input-field">
-          <input class="input-focus" type="email" id="registerEmail" placeholder="Email">
-          <img src="./assets/icons/mail.svg">
-        </div>
-
-        <div class="input-field">
-          <input class="input-focus" type="password" id="registerPassword" placeholder="Password">
-          <img src="./assets/icons/lock.svg">
-        </div>
-
-        <div class="input-field">
-          <input class="input-focus" type="password" id="registerPasswordConfirm" placeholder="Confirm Password">
-          <img src="./assets/icons/lock.svg">
-        </div>
-
-        <div class="accept-privacy-policy">
-          <input type="checkbox" class="accept-privacy" id="acceptPrivacy">
-          <div><span class="checkbox-text">I accept the </span><a href="./public/privacy-policy.html">Privacy Policy</a>
+        <div class="input-wrapper">
+          <div class="input-field">
+            <input class="input-focus" type="text" id="registerName" placeholder="Name">
+            <img src="./assets/icons/person.svg">
           </div>
+          <span class="error-message" id="registerNameError"></span>
+        </div>
+
+        <div class="input-wrapper">
+          <div class="input-field">
+            <input class="input-focus" type="email" id="registerEmail" placeholder="Email">
+            <img src="./assets/icons/mail.svg">
+          </div>
+          <span class="error-message" id="registerEmailError"></span>
+        </div>
+
+        <div class="input-wrapper">
+          <div class="input-field">
+            <input class="input-focus" type="password" id="registerPassword" placeholder="Password">
+            <img src="./assets/icons/lock.svg">
+          </div>
+          <span class="error-message" id="registerPasswordError"></span>
+        </div>
+
+        <div class="input-wrapper">
+          <div class="input-field">
+            <input class="input-focus" type="password" id="registerPasswordConfirm" placeholder="Confirm Password">
+            <img src="./assets/icons/lock.svg">
+          </div>
+          <span class="error-message" id="registerPasswordConfirmError"></span>
+        </div>
+
+        <div class="privacy-wrapper">
+          <div class="accept-privacy-policy">
+            <input type="checkbox" class="accept-privacy" id="acceptPrivacy">
+            <div><span class="checkbox-text">I accept the </span><a href="./public/privacy-policy.html">Privacy Policy</a>
+            </div>
+          </div>
+          <span class="error-message" id="acceptPrivacyError"></span>
         </div>
 
         <div class="login-buttons">
