--- a/addTask.html
+++ b/addTask.html
@@ -11,7 +11,7 @@
 
 
   <script src="./scripts/sidebar.js"></script>
-  <script src="./script.js"></script>
+  <script src="./script.js"></script>^
   <script src="./scripts/addTask.js" defer></script>
   <script src="./scripts/addTaskTemplates.js" defer></script>
   <script src="./scripts/contacts.js" defer></script>
