login: input margin-bottom changed

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="login-separater"></div>
         <form class="login-input">
           <div class="input-field">
-            <input type="email" id="loginEmail" class="input-placeholder" placeholder="Email">
+            <input type="email" id="loginEmail" class="input-placeholder login-input-email" placeholder="Email">
             <img src="./assets/icons/mail.svg" alt="">
           </div>
           <div class="input-field">
-            <input type="password" id="loginPassword" class="input-placeholder" placeholder="Password">
+            <input type="password" id="loginPassword" class="input-placeholder login-input-password" placeholder="Password">
             <img src="./assets/icons/lock.svg" alt="" id="lockIcon">
             <img src="./assets/icons/visibility_off.svg" alt="" id="visibilityOffIcon" class="is-hidden password-toggle">
             <img src="./assets/icons/visibility.svg" alt="" id="visibilityIcon" class="is-hidden password-toggle">
