signup: Password visibility

--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,9 @@
         <div class="input-wrapper">
           <div class="input-field">
             <input class="input-focus" type="password" id="registerPassword" placeholder="Password">
-            <img src="./assets/icons/lock.svg">
+            <img src="./assets/icons/lock.svg" alt="" id="registerLockIcon">
+            <img src="./assets/icons/visibility_off.svg" alt="" id="registerVisibilityOffIcon" class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility.svg" alt="" id="registerVisibilityIcon" class="is-hidden password-toggle">
           </div>
           <span class="error-message" id="registerPasswordError"></span>
         </div>
@@ -52,7 +54,9 @@
         <div class="input-wrapper">
           <div class="input-field">
             <input class="input-focus" type="password" id="registerPasswordConfirm" placeholder="Confirm Password">
-            <img src="./assets/icons/lock.svg">
+            <img src="./assets/icons/lock.svg" alt="" id="registerConfirmLockIcon">
+            <img src="./assets/icons/visibility_off.svg" alt="" id="registerConfirmVisibilityOffIcon" class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility.svg" alt="" id="registerConfirmVisibilityIcon" class="is-hidden password-toggle">
           </div>
           <span class="error-message" id="registerPasswordConfirmError"></span>
         </div>
