privacy policy: minor adjustments

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -72,7 +72,48 @@
 
 
     <div class="wrapper">
-      <p>text</p>
+      <h1>Privacy Policy</h1>
+      <p>
+        We take the protection of your personal data very seriously. This Privacy Policy explains how we collect,
+        use and protect your information when using the Join Kanban Project Management Tool.
+      </p>
+
+      <h2>1. Data Collection</h2>
+      <p>
+        We only collect data that is necessary for the functionality of the application. This includes task data,
+        contact information and usage-related data stored locally in your browser.
+      </p>
+
+      <h2>2. Data Storage</h2>
+      <p>
+        All data is stored locally using your browser’s local storage. No personal data is transmitted to external
+        servers.
+      </p>
+
+      <h2>3. Purpose of Data Processing</h2>
+      <p>
+        The collected data is used solely to provide and improve the functionality of the application.
+      </p>
+
+      <h2>4. Third-Party Services</h2>
+      <p>
+        This application does not use third-party tracking tools or external analytics services.
+      </p>
+
+      <h2>5. User Rights</h2>
+      <p>
+        You have the right to access, modify or delete your data at any time by clearing your browser’s local storage.
+      </p>
+
+      <h2>6. Changes to this Privacy Policy</h2>
+      <p>
+        We reserve the right to update this Privacy Policy if necessary to reflect changes in the application.
+      </p>
+
+      <h2>7. Contact</h2>
+      <p>
+        If you have any questions regarding data protection, please contact the project administrator.
+      </p>
     </div>
 
   </main>
