dropdown menu added when clicking the profile button

--- a/addTask.html
+++ b/addTask.html
@@ -11,7 +11,7 @@
 
 
   <script src="./scripts/sidebar.js"></script>
-  <script src="./script.js"></script>^
+  <script src="./script.js"></script>
   <script src="./scripts/addTask.js" defer></script>
   <script src="./scripts/addTaskTemplates.js" defer></script>
   <script src="./scripts/contacts.js" defer></script>
@@ -69,7 +69,14 @@
 
         <div class="user-actions">
           <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
-          <div class="user-profile-container"><span class="user-profile" id="user-profile">G</span></div>
+          <div class="user-profile-container">
+            <span class="user-profile" id="user-profile" onclick="toggleProfileMenu(event)">G</span>
+            <div class="profile-menu" id="profileMenu">
+              <a href="./legal-notice.html">Legal Notice</a>
+              <a href="./privacy-policy.html">Privacy Policy</a>
+              <button onclick="logout()">Log out</button>
+            </div>
+          </div>
         </div>
       </header>
 
