--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles/privacy-policy.css">
   <link rel="stylesheet" href="/styles/sidebar.css">
   <link rel="stylesheet" href="/styles/header.css">
+  <script src="/script.js" defer></script>
 
   <script src="/scripts/sidebar.js" defer></script>
 
@@ -48,7 +49,6 @@
         <div class="user-profile-container">
           <span class="user-profile" id="user-profile">G</span>
         </div>
-        <button class="btn-logout" onclick="logout()">Logout</button>
       </div>
     </header>
 
