--- a/contacts.html
+++ b/contacts.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="./styles/header.css">
   <link rel="stylesheet" href="./styles/contacts.css">
 
+  <script src="./script.js" defer></script>
   <script src="./scripts/summary.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
   <script src="./scripts/contacts.js" defer></script>
   <script src="./scripts/contacts-template.js" defer></script>
-  <script src="./script.js" defer></script>
+  
 
 
 
@@ -72,9 +73,13 @@
       <div class="user-actions">
         <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
         <div class="user-profile-container">
-          <span class="user-profile" id="user-profile">G</span>
+          <span class="user-profile" id="user-profile" onclick="toggleProfileMenu(event)">G</span>
+          <div class="profile-menu" id="profileMenu">
+            <a href="./legal-notice.html">Legal Notice</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
+            <button onclick="logout()">Log out</button>
+          </div>
         </div>
-        <button class="btn-logout" onclick="logout()">Logout</button>
       </div>
     </header>
 
