--- a/help.html
+++ b/help.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/header.css">
-  <script src="./scripts/sidebar.js"></script>
+  <script src="./script.js" defer></script>
+  <script src="./scripts/sidebar.js" defer></script>
+
 </head>
 
 <body>
@@ -57,7 +59,14 @@
     </div>
     <div class="user-actions">
       <img class="help-icon" src="./assets/icons/help.svg" alt="Help">
-      <div class="user-profile-container"><span class="user-profile">G</span></div>
+      <div class="user-profile-container">
+        <span class="user-profile" id="user-profile" onclick="toggleProfileMenu(event)">G</span>
+        <div class="profile-menu" id="profileMenu">
+          <a href="./legal-notice.html">Legal Notice</a>
+          <a href="./privacy-policy.html">Privacy Policy</a>
+          <button onclick="logout()">Log out</button>
+        </div>
+      </div>
     </div>
   </header>
 
