--- a/board.html
+++ b/board.html
@@ -14,6 +14,7 @@
     <script src="./scripts/sidebar.js"></script>
     <script src="./script.js"></script>
     <script src="./scripts/board.js"></script>
+    <script src="./scripts/boardTemplate.js"></script>
     <script src="./scripts/addTask.js"></script>
     <script src="./scripts/addTaskTemplates.js"></script>
 </head>
