--- a/board.html
+++ b/board.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/header.css">
 
-
-
+    <!-- Auth Guard - MUSS VOR anderen Scripts laden -->
+    <script src="./firebase.js" defer></script>
+    <script src="./script.js" defer></script>
     <script src="./scripts/sidebar.js"></script>
     <script src="./script.js"></script>
     <script src="./scripts/board.js"></script>
@@ -21,7 +22,7 @@
 
 <body onload="loadTasks()">
     <div class="app">
-         <nav class="sidebar">
+        <nav class="sidebar">
             <img class="logo_sidebar" src="./assets/img/join_logo_white.svg" alt="Join Logo">
 
             <ul>
@@ -70,7 +71,9 @@
                     <p class="app-tagline">Kanban Project Management Tool</p>
                 </div>
                 <div class="user-actions">
-                    <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
+                    <a href="./help.html">
+                        <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
+                    </a>
                     <div class="user-profile-container">
                         <span class="user-profile" id="user-profile" onclick="toggleProfileMenu(event)">G</span>
                         <div class="profile-menu" id="profileMenu">
