--- a/contacts.html
+++ b/contacts.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="./styles/header.css">
   <link rel="stylesheet" href="./styles/contacts.css">
 
+  <script src="./firebase.js" defer></script>
   <script src="./script.js" defer></script>
   <script src="./scripts/summary.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
   <script src="./scripts/contacts.js" defer></script>
   <script src="./scripts/contacts-template.js" defer></script>
-  
+
 
 
 
@@ -71,7 +72,9 @@
         <p class="app-tagline">Kanban Project Management Tool</p>
       </div>
       <div class="user-actions">
-        <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
+        <a href="./help.html">
+          <img class="help-icon" src="./assets/icons/help.svg" alt="Help" onclick="navigateToHelp()">
+        </a>
         <div class="user-profile-container">
           <span class="user-profile" id="user-profile" onclick="toggleProfileMenu(event)">G</span>
           <div class="profile-menu" id="profileMenu">
