--- a/help.html
+++ b/help.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/header.css">
 
+  <script src="./firebase.js" defer></script>
   <script src="./script.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
 
@@ -77,7 +78,7 @@
 
 
     <div class="wrapper">
-      <p>Text</p>
+      <p>Help</p>
     </div>
 
   </main>
