--- a/legal-notice.html
+++ b/legal-notice.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/header.css">
 
+  <script src="./firebase.js" defer></script>
   <script src="./script.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
 
