--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./styles/privacy-policy.css">
   <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/header.css">
+
+
+  <script src="./firebase.js" defer></script>
   <script src="./script.js" defer></script>
   <script src="./scripts/sidebar.js" defer></script>
 
