--- a/board.html
+++ b/board.html
@@ -100,7 +100,7 @@
 
         </main>
     </div>
-    <div id="addTask-dialog" class="addTask-dialog-bg d-none" onclick="closeDialog()">
+    <div id="addTask-dialog" class="addTask-dialog-bg d-none">
         <div id="addTask-dialog-message" class="addTask-dialog">
 
         </div>
