--- a/addTask.html
+++ b/addTask.html
@@ -76,7 +76,7 @@
             <div class="profile-menu" id="profileMenu">
               <a href="./legal-notice.html">Legal Notice</a>
               <a href="./privacy-policy.html">Privacy Policy</a>
-              <button onclick="logout()">Log out</button>
+              <button type="button" onclick="logout(event)">Log out</button>
             </div>
           </div>
         </div>
