--- a/board.html
+++ b/board.html
@@ -68,6 +68,7 @@
         <main class="main">
             <!-- Topbar -->
             <header>
+                <img class="header-logo" src="./assets/img/Join Logo.svg" alt="Join Logo">
                 <div class="center">
                     <p class="app-tagline">Kanban Project Management Tool</p>
                 </div>
