--- a/contacts.html
+++ b/contacts.html
@@ -68,6 +68,7 @@
 
   <main>
     <header>
+      <img class="header-logo" src="./assets/img/Join Logo.svg" alt="Join Logo">
       <div class="center">
         <p class="app-tagline">Kanban Project Management Tool</p>
       </div>
@@ -106,7 +107,7 @@
       <section class="contact-section-left">
         <div class="contact-section">
           <button class="add-contact-btn" onclick="openAddContactDialog()">
-            Add new contact
+            <span class="add-contact-btn__label">Add new contact</span>
             <img src="./assets/icons/person_add.svg" alt="add Person">
           </button>
           <div class="contact-section scroll">
