--- a/addTask.html
+++ b/addTask.html
@@ -63,6 +63,7 @@
     <!-- Main -->
     <main class="main">
       <header>
+        <img class="header-logo" src="./assets/img/Join Logo.svg" alt="Join Logo">
         <div class="center">
           <p class="app-tagline">Kanban Project Management Tool</p>
         </div>
