--- a/board.html
+++ b/board.html
@@ -14,11 +14,11 @@
     <script src="./firebase.js" defer></script>
     <script src="./script.js" defer></script>
     <script src="./scripts/sidebar.js"></script>
-    <script src="./scripts/board.js"></script>
-    <script src="./scripts/boardTemplate.js"></script>
     <script src="./scripts/addTask.js"></script>
     <script src="./scripts/addTaskTemplates.js"></script>
-    <script src="./scripts/modal.js"></script>
+    <script src="./scripts/boardModalTemplates.js"></script>
+    <script src="./scripts/boardTemplate.js"></script>
+    <script src="./scripts/board.js"></script>
 </head>
 
 <body onload="loadTasks()">
